# mkdocs-material2014

./: .gitignore  README.md  justfile  macros.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: frontend-bug-report.yml
.github/workflows/: build_publish.yml  docs.yml  pkg.yml
docs/: debug.md  index.md
docs/demo/: code.md  content-tabs.md  diagrams.md  formatting.md  openapi.md  test.md
docs/get_started/: create.md  install.md  publish.md
docs/test/: admonitions.md  code.md  content-tabs.md  diagrams.md  footnotes.md  home.md  math.md  openapi.md  table.md  tasklist.md  termlist.md  test.md  toc.md
docs/usage/: configuration.md  syntax.md
site/: index.html  main.html  script.js  style.css
site/css/: main.css  page-content.css  search.css
src/material1/templates/: main.html  script.js
src/material2014/templates/: base.html  main.html  mkdocs_theme.yml  script.js  style.css
src/material2014/templates/css/: code.css  main.css  page-content.css  search.css  sidebar.css
