[project]
name = "true-material-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mdx-include==1.4.2",
    "mkdocstrings[python]==0.29.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-macros-plugin==1.3.7",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-ezglossary-plugin>=2.0.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-mermaid-plugin>=0.1.1",
    "mkdocs-mermaid-zoom>=0.1.0",
    "pymdown-extensions>=10.16.1",
]
